# agentdesk

./: .gitignore  Dockerfile.api  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agentdesk/: __init__.py  api.py  audit.py  cli.py  sample_requests.py  service.py
agentdesk/backend/: __init__.py  store.py
agentdesk/core/: __init__.py  agent.py  confidence.py  result.py
agentdesk/provider/: __init__.py  base.py  fake.py
agentdesk/tools/: __init__.py  registry.py
bench/: baseline.json  regress.py  throughput.py
e2e/: console.spec.ts  package-lock.json  package.json  playwright.config.ts
tests/: test_agent.py  test_api.py  test_audit.py  test_backend.py  test_bench.py  test_calibration.py  test_cli.py  test_confidence.py  test_escalation_paths.py  test_service.py  test_threshold_tuning.py  test_tool_contract.py  test_tools.py
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api.ts  index.css  types.ts
web/src/components/: ConfidenceBar.test.tsx  ConfidenceBar.tsx  RequestCard.test.tsx  RequestCard.tsx  ToolTrace.tsx
