[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentdesk"
version = "0.5.0"
description = "Customer-operations agent with confidence-gated human handoff and an oversight console."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "SAY-5" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
agentdesk = "agentdesk.cli:main"
agentdesk-serve = "agentdesk.api:serve"

[tool.setuptools.packages.find]
include = ["agentdesk*", "bench*"]

[tool.setuptools.package-data]
agentdesk = ["py.typed"]
bench = ["baseline.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=agentdesk --cov-report=term-missing --cov-fail-under=88"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["agentdesk"]
